Message inbox initial commit

--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
         Dev Setup Options
         { siteId: "a9dbcd8d5644fbb673ef", dataCenter: "us", useGuestSession: true, env: "local", logging: true, experiments: true }
       */
-      Gist.setup({ siteId: "a5ec106751ef4b34a0b9", dataCenter: "eu", logging: true, env: "prod" });
+      Gist.setup({ siteId: "a9dbcd8d5644fbb673ef", dataCenter: "eu", logging: true, env: "dev" });
       Gist.setUserToken("ABC123");
       Gist.setCurrentRoute("home");
 
