--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,7 @@
       <a href="#" class="button" onClick="showComplexMessage()">Show Complex Message</a>
       <a href="#" class="button" onClick="embedBanner()">Embed Banner</a>
       <a href="#" class="button" onClick="embedFloatingMessage()">Embed Floating Message</a>
+      <a id="message-inbox-button" href="#" class="button">Show Message Inbox</a>
     </div>
     <div class="row docs">
       <p>More information can be found on our <a target="_blank" href="https://docs.gist.build">docs</a>, if you have any question you can email us at <a target="_blank" href="mailto:support@gist.build">support@gist.build</a></p>
